feat(app):  Initialize tailwind, refactor products grid

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 $shadow-dark: 0px 4px 10px rgba(0, 0, 0, 0.1);
 $shadow-light: 0px 4px 10px rgba(255, 255, 255, 0.05);
 
