refactor(style): Animated lights

--- a/src/css/q-btn.scss
+++ b/src/css/q-btn.scss
@@ -10,4 +10,8 @@ button.q-btn {
   &.q-btn--rectangle {
     padding: 0.5rem 1rem;
   }
+  // &.-q-btn-item.q-btn--rectangle {
+  //   padding: 1rem !important;
+  // }
+  color: #d4cfc0
 }
