refactor(drawer): Settings

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+// @import 'q-layout.scss';
+// @import 'q-header.scss';
+// @import 'q-pagination.scss';
+// @import 'q-notify.scss';
+// @import 'q-dialog.scss';
+// @import 'q-item.scss';
 @import 'q-card.scss';
-@import 'q-header.scss';
-@import 'q-pagination.scss';
-@import 'q-item.scss';
-@import 'q-notify.scss';
-@import 'q-dialog.scss';
-@import 'q-layout.scss';
-@import 'q-btn.scss';
+// @import 'q-btn.scss';
 
 $grey: #77312b;
 
