refactor(theme): Fix light navbar

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,13 +3,14 @@
 @tailwind utilities;
 
 // @import 'q-layout.scss';
-// @import 'q-header.scss';
+@import 'q-header.scss';
 // @import 'q-pagination.scss';
 // @import 'q-notify.scss';
 // @import 'q-dialog.scss';
 // @import 'q-item.scss';
 @import 'q-card.scss';
-// @import 'q-btn.scss';
+@import 'q-btn.scss';
+@import 'q-select.scss';
 
 $grey: #77312b;
 
