--- a/src/css/q-btn.scss
+++ b/src/css/q-btn.scss
@@ -10,8 +10,7 @@ button.q-btn {
   &.q-btn--rectangle {
     padding: 0.5rem 1rem;
   }
-  // &.-q-btn-item.q-btn--rectangle {
-  //   padding: 1rem !important;
-  // }
-  color: #d4cfc0
+  &.-q-btn-item.q-btn--rectangle {
+    padding: 1rem !important;
+  }
 }
