refactor(tabs): Fix navbar

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,7 +4,7 @@
 
 // @import 'q-layout.scss';
 @import 'q-header.scss';
-// @import 'q-pagination.scss';
+@import 'q-pagination.scss';
 // @import 'q-notify.scss';
 // @import 'q-dialog.scss';
 // @import 'q-item.scss';
