--- a/src/css/q-dialog.scss
+++ b/src/css/q-dialog.scss
@@ -1,13 +1,21 @@
-.q-dialog .q-select__dialog {
-  max-width: 500px !important;
-  .q-virtual-scroll__content {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-items: center;
-    text-align: center;
-    gap: 1rem;
-    padding: 0.45rem 0;
+.q-dialog--modal {
+  .q-dialog .q-select__dialog {
+    max-width: 500px !important;
+    .q-virtual-scroll__content {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+      justify-items: center;
+      text-align: center;
+      gap: 1rem;
+      padding: 0.45rem 0;
+    }
+  }
+
+  .q-item.q-router-link--active,
+  .q-item.q-item--active.q-item--dark.q-link {
+    background-color: var(--q-dark) !important;
+    color: var(--q-light) !important;
   }
 }
