--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -26,8 +26,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   scroll-behavior: smooth;
 }
@@ -35,10 +35,12 @@ body {
 html {
   background-color: black;
   font-size: 20px;
+  height: -webkit-fill-available;
 }
 
 body {
   font-size: 100%;
+  height: -webkit-fill-available;
 }
 
 .body--light {
