--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -36,6 +36,9 @@ html {
   background-color: black;
   font-size: 20px;
   height: -webkit-fill-available;
+  @media screen and (max-width: 600px) {
+    padding-bottom: 80px !important;
+  }
 }
 
 body {
