--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -15,9 +15,9 @@
 :root {
   --vh: 1vh;
   --header-height: 54px;
-  --footer-height: 35px;
-  --content-height: calc(100dvh - var(--header-height) - var(--footer-height));
+  --footer-height: 20px;
   --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px);
+  --content-height: calc(100dvh - var(--header-height) - var(--footer-height));
 }
 
 @supports (-webkit-touch-callout: none) {
@@ -77,6 +77,40 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+
+/* Mobile devices */
+@media screen and (max-width: 599px) {
+  :root {
+    --mobile-bottom-offset: 30px;
+
+    @supports (-webkit-touch-callout: none) {
+      /* iOS specific */
+      --content-height: calc(
+        100dvh - var(--header-height) - var(--footer-height) - var(--mobile-bottom-offset) - env(
+            safe-area-inset-bottom,
+            20px
+          )
+      );
+    }
+
+    @supports not (-webkit-touch-callout: none) {
+      /* Android specific */
+      --content-height: calc(
+        100dvh - var(--header-height) - var(--footer-height) - var(--mobile-bottom-offset)
+      );
+    }
+  }
+}
+
+.q-layout {
+  min-height: 100dvh;
+  height: 100dvh;
+
+  @supports not (height: 100dvh) {
+    min-height: 100vh;
+    height: 100vh;
+  }
 }
 
 .price-text {
