styles(card): Background

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -6,7 +6,7 @@
 @import 'q-header.scss';
 @import 'q-pagination.scss';
 // @import 'q-notify.scss';
-// @import 'q-dialog.scss';
+@import 'q-dialog.scss';
 @import 'q-item.scss';
 @import 'q-card.scss';
 @import 'q-btn.scss';
