--- a/src/css/q-btn.scss
+++ b/src/css/q-btn.scss
@@ -17,3 +17,29 @@ button.q-btn {
     padding: 1rem !important;
   }
 }
+
+.q-btn[disabled] {
+  background-image: linear-gradient(
+    45deg,
+    #ccc 10%,
+    transparent 10%,
+    transparent 20%,
+    #ccc 20%,
+    #ccc 30%,
+    transparent 30%,
+    transparent 40%,
+    #ccc 40%,
+    #ccc 50%,
+    transparent 50%,
+    transparent 60%,
+    #ccc 60%,
+    #ccc 70%,
+    transparent 70%,
+    transparent 80%,
+    #ccc 80%,
+    #ccc 90%,
+    transparent 90%,
+    transparent
+  ) !important;
+  background-size: 10px 10px;
+}
