--- a/src/css/q-btn.scss
+++ b/src/css/q-btn.scss
@@ -44,6 +44,7 @@ button.q-btn {
   background-size: 10px 10px;
   mix-blend-mode: difference;
   color: white;
+  font-weight: 800;
 }
 
 body.desktop .q-focusable:focus > .q-focus-helper,
